--- a/src/components/MenuBar/menu-bar.css
+++ b/src/components/MenuBar/menu-bar.css
@@ -1,14 +1,12 @@
 .menu-bar {
   display:inline-block;
-  right:0px;
   top:0px;
   width:100%;
-  z-index:2;;
   border-style:solid;
-  border-radius:2px;
-  border-color:white;
-  background-color:white;
+  border-color:gray;
+  background-color:black;
 }
+/*
 .menu-button {
   display:inline-block;
   float:right;
@@ -20,4 +18,23 @@
   background-color: white;
   font-weight: bold;
   font-size:14px;
+}
+*/
+.menu-title {
+  display:inline-block;
+  font-size:40px;
+  line-height:150%;
+  color:white;
+}
+.menu-appicon {
+  display:inline-block;
+  float:left;
+  padding:5px;
+}
+.menu-image {
+  display:inline-block;
+  float:right;
+  width:auto;
+  padding:5px;
+  margin:5px;
 }
