--- a/src/components/Map/map.css
+++ b/src/components/Map/map.css
@@ -1,8 +1,33 @@
 .map-panel {
-  position:absolute;
-  right:0px;
-  width:100vw;
-  height:100vh;
+  flex: 1;
+  order: 2;
+}
+
+.edit-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 150px;
+  bottom: 0px;
+  background-color: black;
+  opacity: 0.8;
+  z-index: 4;
+}
+
+.gps-button {
+  position: absolute;
+  top: 10px;  
+  right: 10px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-size: 47px 47px;
+  background-color: black;
+  background-image: url('../../../dist/current_location.png');
+  z-index: 1;
+  outline: none;
 }
 
 :global #draw-polygon {
@@ -14,7 +39,7 @@
 
 :global .leaflet-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 2;
 }
 
