--- a/src/components/MenuBar/menu-bar.css
+++ b/src/components/MenuBar/menu-bar.css
@@ -57,3 +57,13 @@
   background-color: black;
   background-image: url('../../../dist/add_button.png');
 }
+.clear-cache-button {
+  cursor: pointer;
+  background-color: lightgrey;
+  border: 1px solid #000;
+}
+.change-domain-button {
+  cursor: pointer;
+  background-color: lightgrey;
+  border: 1px solid #000;
+}
