Put and Setup functions in Cache are added

--- a/src/components/MenuBar/menu-bar.css
+++ b/src/components/MenuBar/menu-bar.css
@@ -67,3 +67,8 @@
   background-color: lightgrey;
   border: 1px solid #000;
 }
+.sync-button {
+  cursor: pointer;
+  background-color: lightgrey;
+  border: 1px solid #000;
+}
